fix(pianobar): use env variables from zshenv to populate config

--- a/pianobar/config.j2
+++ b/pianobar/config.j2
@@ -1,7 +1,7 @@
 autostart_station = 159651257318568219
 
-user =
-password =
+user = {{ user }}
+password = {{ pw }}
 
 # Format strings
 format_nowplaying_song = [32m%t[0m by [33m%a[0m on [36m%l%r[0m%
